<resources>
    <string name="app_name" translatable="false">GoGit</string>
    <string name="no_data_available">Nothing to display</string>
    <string name="login_with_git_hub">Login with Git hub</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="repo_count">Repositories</string>

    <string name="file_provider_authority" translatable="false">com.jk.gogit.fileprovider</string>


    <string name="unfollow">Unfollow</string>
    <string name="follow">Follow</string>
    <string name="open_issue">Open Issue %1$s</string>
    <string name="watch">Watch %1$s</string>
    <string name="star">Star %1$s</string>

    <string name="issue_commented">%1$s commented on %2$s</string>
    <string name="forked_from">Forked from %1$s</string>
    <string name="issue_openned">%1$s opened this issue on %2$s</string>

    <string name="something_wrong_pp">
     No Internet connection. Make sure that wifi or mobile data is turned
        on, then try again.
    </string>




    <string name="error">Error</string>
    <string name="setting">Setting</string>
    <string name="your_profile">Your Profile</string>
    <string name="logout">Logout</string>
    <string name="title_activity_issue_detail">IssueDetailActivity</string>
    <string name="download">Download</string>
    <string name="save">Done</string>
    <string name="no_description_provided">No description Provided</string>
    <string name="theres_is_no_open_issue">There aren’t any open issues.</string>
    <string name="unsupported_file_format">This type of file is not supported\n please download it manually from top menu</string>
    <string name="no_internet"> No Internet connection. Make sure that wifi or mobile data is turned
        on, then try again. \n\n
       Tap to retry
    </string>
    <string name="title_activity_org_profile">OrgProfileActivity</string>
    <string name="filter">Filter</string>
    <string name="language">Language</string>
    <string name="repo_private">Private</string>
    <string name="repo_public">Public</string>
    <string name="source">Source</string>
    <string name="forks">Forks</string>
    <string name="archived">Archived</string>
    <string name="mirrors">Mirrors</string>
    <string name="all">All</string>
    <string name="member">Member</string>
    <string name="owner">Owner</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="Branches">branches</string>
    <string name="now_u_r_follower">You are a follower now</string>
    <string name="now_u_r_not_follower">You are no longer following this user</string>
    <string name="now_u_r_not_starrer">You are no longer stargazers of this repo</string>
    <string name="now_u_r_starrer">Now you are stargazers of this repo</string>
    <string name="now_u_r_watching_this_repo">Now you are watcher of this repo</string>
    <string name="now_u_r_not_watching_this_repo">You are no longer watcher of this repo</string>
    <string name="alerts">Alerts</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="no_readme_file">No readme file available</string>
    <string name="notification">Notification</string>
    <string name="search">Search</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="password">Password</string>
    <string name="invalid_credential">User Name and password combination is wrong</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Username or email</string>
    <string name="ok">OK</string>
    <string name="email_only">Email</string>
    <string name="tagline">A smarter way to browse github</string>
    <string name="title_activity_about_repo">AboutRepoActivity</string>
    <string name="files">Files</string>
    <string name="about">About</string>
    <!--<string name="no_login">GoGit is GitHub browsing app, Login to see your repo</string>-->
    <string name="no_login">GoGit is a GitHub browsing app.
        you can manage repo, followers organisations etc, login to see your profile.</string>
    <string name="skip_login_now">Skip sign in</string>
    <string name="sign_in_to_gogit">Sign in to GoGit</string>


    <string name="issue_add_label">add the label %s</string>
    <string name="issue_remove_label">remove the label %s</string>
    <string name="issue_close">close this</string>
    <string name="issue_reopened">reopened this</string>
    <string name="issue_commited">committed %s</string>
    <string name="issue_modified">modified this issue</string>
    <string name="issue_added_to_milestone">added this to the %s milestone</string>
    <string name="issue_removed_from_milestone">removed this from the %s milestone</string>
    <string name="issue_locked_conversation">locked and limited conversation to collaborators</string>
    <string name="issue_unlocked_conversation">unlocked this conversation</string>
    <string name="issue_delete_comment">delete a comment</string>
    <string name="issue_head_ref_deleted">deleted a head ref</string>
    <string name="issue_referenced">referenced this issue in %s</string>
    <string name="issue_merged">merged commit %1$s into %2$s</string>
    <string name="issue_assigned">assigned this to %s</string>
    <string name="issue_unassigned">removed their assignment</string>
    <string name="activity_image_trans">profile transition</string>
    <string name="bio">Bio</string>
    <string name="hireable">Available for hire</string>
    <string name="back">back</string>
    <string name="login">Login</string>
    <string name="blog">Blog</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="edit_your_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="reset">Reset</string>
    <string name="terms_condition">By logging you indicate that you have read and agree to our Privacy Policy</string>
    <string name="title_activity_pp_activitiy">Privacy Policy</string>

</resources>
