<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:theme="@style/AppTheme.AppBarOverlay"
                app:elevation="0dp">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/collapsing_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:collapsedTitleGravity="center"
                    app:expandedTitleGravity="center_vertical|center_horizontal"
                    app:layout_scrollFlags="scroll|enterAlwaysCollapsed"

                    >

                    <include layout="@layout/toolbar" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="?android:actionBarSize"
                        android:paddingStart="@dimen/dp5"
                        android:paddingEnd="@dimen/dp5"
                        android:paddingBottom="@dimen/dp5"
                        app:layout_collapseMode="parallax">

                        <TextView
                            android:id="@+id/txt_repo_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white"
                            android:textSize="20sp"
                            app:layout_collapseMode="parallax"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            tools:text="Title this is very good thisnng to be fracntly" />

                        <TextView
                            android:id="@+id/txt_repo_parent"
                            android:visibility="gone"
                            tools:visibility="visible"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:textColor="@android:color/white"
                            android:textSize="12sp"
                            app:layout_collapseMode="parallax"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/txt_repo_name"
                            android:text="@string/forked_from" />

                        <TextView
                            android:id="@+id/txt_repo_description"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:fontFamily="sans-serif"
                            android:maxLines="5"
                            android:textColor="@android:color/white"
                            app:layout_collapseMode="parallax"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/txt_repo_parent"
                            app:layout_constraintTop_toBottomOf="@+id/txt_repo_parent"
                            tools:text="@string/no_description_provided" />


                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.appbar.CollapsingToolbarLayout>


                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabGravity="fill"
                    app:tabIndicatorColor="@color/colorPrimaryLight"
                    app:tabIndicatorHeight="@dimen/tab_indicator_height"
                    app:tabMaxWidth="0dp"
                    app:tabMode="fixed"
                    app:tabSelectedTextColor="@color/white" />
            </com.google.android.material.appbar.AppBarLayout>

            <com.jk.gogit.ui.view.custom.CustomViewPager
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/container_padding"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/float_filter_issue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginEnd="40dp"
                android:backgroundTint="@color/colorTextDark"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_read_more"
                android:tint="@android:color/darker_gray"
                app:borderWidth="0dp"
                app:elevation="2dp"
                app:layout_anchor="@id/container"
                app:layout_anchorGravity="right|bottom" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/txt_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/bebasneue_regular"
        android:minLines="2"
        android:padding="20dp"
        android:text="@string/no_internet"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>